fixing aesthetics, collapsing, and standardization on each page

--- a/public/css/tat.css
+++ b/public/css/tat.css
@@ -417,6 +417,7 @@ input {
 	margin-bottom: 20px;
 	z-index: 1;
 	width: 100%;
+	margin-bottom: 40px !important;
 }
 #nav-links {
 	margin-top: -55px;
